--- a/docs/p1.md
+++ b/docs/p1.md
@@ -13,42 +13,44 @@ Team Number: 20
 ## Table of Contents
 
 - [Project 1: Threads](#project-1--threads)
-    * [Preliminaries](#preliminaries)
+  * [Preliminaries](#preliminaries)
+  * [Table of Contents](#table-of-contents)
 - [Analysis of the current implementation](#analysis-of-the-current-implementation)
-    * [Threads](#threads)
-        + [Overview of Thread life cycle implementation in PintOS](#overview-of-thread-life-cycle-implementation-in-pintos)
-        + [Thread Memory Layout](#thread-memory-layout)
-        + [Thread State](#thread-state)
-    * [Thread Switching](#thread-switching)
-        + [Overview](#overview)
-        + [`schedule()`](#-schedule---)
-        + [`switch_threads()`](#-switch-threads---)
-        + [Special Case: Starting a Thread for the First Time](#special-case--starting-a-thread-for-the-first-time)
-    * [Synchronization](#synchronization)
-        + [Disabling interrupts](#disabling-interrupts)
-        + [Semaphore](#semaphore)
-        + [Lock](#lock)
-        + [Condition Variable](#condition-variable)
-        + [Optimization barrier](#optimization-barrier)
+  * [Threads](#threads)
+    + [Overview of Thread life cycle implementation in PintOS](#overview-of-thread-life-cycle-implementation-in-pintos)
+    + [Thread Memory Layout](#thread-memory-layout)
+    + [Thread State](#thread-state)
+  * [Thread Switching](#thread-switching)
+    + [Overview](#overview)
+    + [`schedule()`](#-schedule---)
+    + [`switch_threads()`](#-switch-threads---)
+    + [Special Case: Starting a Thread for the First Time](#special-case--starting-a-thread-for-the-first-time)
+  * [Synchronization](#synchronization)
+    + [Disabling interrupts](#disabling-interrupts)
+    + [Semaphore](#semaphore)
+    + [Lock](#lock)
+    + [Condition Variable](#condition-variable)
+    + [Optimization barrier](#optimization-barrier)
 - [Requirements](#requirements)
-    * [Alarm Clock](#alarm-clock)
-        + [Overview of Current Implementation](#overview-of-current-implementation)
-        + [Data Structures](#data-structures)
-        + [Algorithms](#algorithms)
-        + [Implementation](#implementation)
-        + [Rationale](#rationale)
-    * [Priority Scheduling](#priority-scheduling)
-        + [Overview of Current Implementation](#overview-of-current-implementation-1)
-        + [Data Structures](#data-structures-1)
-        + [Algorithms](#algorithms-1)
-        + [Implementation](#implementation-1)
-        + [Rationale](#rationale-1)
-    * [Advanced Scheduler](#advanced-scheduler)
-        + [Overview of Current Implementation](#overview-of-current-implementation-2)
-        + [Data Structures](#data-structures-2)
-        + [Algorithms](#algorithms-2)
-        + [Implementation](#implementation-2)
-        + [Rationale](#rationale-2)
+  * [Alarm Clock](#alarm-clock)
+    + [Overview of Current Implementation](#overview-of-current-implementation)
+    + [Data Structures](#data-structures)
+    + [Algorithms](#algorithms)
+    + [Implementation](#implementation)
+    + [Rationale](#rationale)
+  * [Priority Scheduling](#priority-scheduling)
+    + [Overview of Current Implementation](#overview-of-current-implementation-1)
+    + [Priority Inversion](#priority-inversion)
+    + [Data Structures](#data-structures-1)
+    + [Algorithms](#algorithms-1)
+    + [Implementation](#implementation-1)
+    + [Rationale](#rationale-1)
+  * [Advanced Scheduler](#advanced-scheduler)
+    + [Overview of Current Implementation](#overview-of-current-implementation-2)
+    + [Data Structures](#data-structures-2)
+    + [Algorithms](#algorithms-2)
+    + [Implementation](#implementation-2)
+    + [Rationale](#rationale-2)
 
 # Analysis of the current implementation
 
