donee 의 우선순위 업데이트 순서 변경

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -742,14 +742,14 @@ void lock_acquire(struct lock *lock) {
 }
 ```
 
-- `priority_donation()`
+- `donate_priority()`
 
 ```c
 void donate_priority(struct thread *donor, struct thread *donee) {
   // TODO: dealing with depth of nested search
   while (donee->waiting_lock != NULL) { 
-    donee = donee->waiting_lock->holder;
     donee->priority = donor->priority;
+    donee = donee->waiting_lock->holder;
     donor = donee;
   }
 }
