--- a/docs/p1.md
+++ b/docs/p1.md
@@ -13,44 +13,44 @@ Team Number: 20
 ## Table of Contents
 
 - [Project 1: Threads](#project-1--threads)
-  * [Preliminaries](#preliminaries)
-  * [Table of Contents](#table-of-contents)
+    * [Preliminaries](#preliminaries)
+    * [Table of Contents](#table-of-contents)
 - [Analysis of the current implementation](#analysis-of-the-current-implementation)
-  * [Threads](#threads)
-    + [Overview of Thread life cycle implementation in PintOS](#overview-of-thread-life-cycle-implementation-in-pintos)
-    + [Thread Memory Layout](#thread-memory-layout)
-    + [Thread State](#thread-state)
-  * [Thread Switching](#thread-switching)
-    + [Overview](#overview)
-    + [`schedule()`](#-schedule---)
-    + [`switch_threads()`](#-switch-threads---)
-    + [Special Case: Starting a Thread for the First Time](#special-case--starting-a-thread-for-the-first-time)
-  * [Synchronization](#synchronization)
-    + [Disabling interrupts](#disabling-interrupts)
-    + [Semaphore](#semaphore)
-    + [Lock](#lock)
-    + [Condition Variable](#condition-variable)
-    + [Optimization barrier](#optimization-barrier)
+    * [Threads](#threads)
+        + [Overview of Thread life cycle implementation in PintOS](#overview-of-thread-life-cycle-implementation-in-pintos)
+        + [Thread Memory Layout](#thread-memory-layout)
+        + [Thread State](#thread-state)
+    * [Thread Switching](#thread-switching)
+        + [Overview](#overview)
+        + [`schedule()`](#-schedule---)
+        + [`switch_threads()`](#-switch-threads---)
+        + [Special Case: Starting a Thread for the First Time](#special-case--starting-a-thread-for-the-first-time)
+    * [Synchronization](#synchronization)
+        + [Disabling interrupts](#disabling-interrupts)
+        + [Semaphore](#semaphore)
+        + [Lock](#lock)
+        + [Condition Variable](#condition-variable)
+        + [Optimization barrier](#optimization-barrier)
 - [Requirements](#requirements)
-  * [Alarm Clock](#alarm-clock)
-    + [Overview of Current Implementation](#overview-of-current-implementation)
-    + [Data Structures](#data-structures)
-    + [Algorithms](#algorithms)
-    + [Implementation](#implementation)
-    + [Rationale](#rationale)
-  * [Priority Scheduling](#priority-scheduling)
-    + [Overview of Current Implementation](#overview-of-current-implementation-1)
-    + [Priority Inversion](#priority-inversion)
-    + [Data Structures](#data-structures-1)
-    + [Algorithms](#algorithms-1)
-    + [Implementation](#implementation-1)
-    + [Rationale](#rationale-1)
-  * [Advanced Scheduler](#advanced-scheduler)
-    + [Overview of Current Implementation](#overview-of-current-implementation-2)
-    + [Data Structures](#data-structures-2)
-    + [Algorithms](#algorithms-2)
-    + [Implementation](#implementation-2)
-    + [Rationale](#rationale-2)
+    * [Alarm Clock](#alarm-clock)
+        + [Overview of Current Implementation](#overview-of-current-implementation)
+        + [Data Structures](#data-structures)
+        + [Algorithms](#algorithms)
+        + [Implementation](#implementation)
+        + [Rationale](#rationale)
+    * [Priority Scheduling](#priority-scheduling)
+        + [Overview of Current Implementation](#overview-of-current-implementation-1)
+        + [Priority Inversion](#priority-inversion)
+        + [Data Structures](#data-structures-1)
+        + [Algorithms](#algorithms-1)
+        + [Implementation](#implementation-1)
+        + [Rationale](#rationale-1)
+    * [Advanced Scheduler](#advanced-scheduler)
+        + [Overview of Current Implementation](#overview-of-current-implementation-2)
+        + [Data Structures](#data-structures-2)
+        + [Algorithms](#algorithms-2)
+        + [Implementation](#implementation-2)
+        + [Rationale](#rationale-2)
 
 # Analysis of the current implementation
 
@@ -296,7 +296,9 @@ invoke `thread_schedule_tail()` and switch to the next thread.
 ## Synchronization
 
 ### Disabling interrupts
-When dealing with synchronization problems, ensuring that preemption does not occur while executing the atomic function is crucial.
+
+When dealing with synchronization problems, ensuring that preemption does not occur while executing the atomic function
+is crucial.
 So, it is necessary to prevent the preemption from occurring.
 In pintos, the preemption occurs when the `thread_ticks` gets greater than `TIME_SLICE`.
 The `thread_ticks` is increased by the `thread_tick()`, called by the external interrupt handler `timer_interrupt()`.
@@ -305,8 +307,10 @@ The interrupt can be controlled manually via the functions defined in `src/inter
 Specifically, disabling interrupts can be done by `intr_disable()` and rollback interrupts by `intr_set_level()`.
 
 ### Semaphore
+
 A semaphore is a synchronization primitive invented to control access to a common resource shared by multiple threads.
-The semaphore S is a variable that holds an integer value, and this value can be accessed and edited by only two operators, P and V.
+The semaphore S is a variable that holds an integer value, and this value can be accessed and edited by only two
+operators, P and V.
 The integer value held by the semaphore is the number of currently available units.
 A thread calls P before accessing the critical section(a shared resource that two or more threads should not access).
 If the semaphore value is over 1, decrement the value and enter the critical section.
@@ -315,6 +319,7 @@ A thread calls V after completing the operation in the critical section.
 V increments the semaphore value.
 
 Pintos implemented a semaphore as follows.
+
 ```c++
 struct semaphore
   {
@@ -326,10 +331,13 @@ struct semaphore
 A `semaphore` is initiated by `sema_init()`. For P and V, `sema_up()` and `sema_down()` is implemented.
 
 - `sema_init()`: Set an initial value for the variable `value` and initiate a list, `waiters`.
-- `sema_down()`: P. If the `value` is 0, the caller thread is pushed into the `waiters` by `list_push_back()` and blocked
-  by `thread_block()`. When the `value` becomes positive, the caller thread decrements the `value` and returns to access the critical section.
+- `sema_down()`: P. If the `value` is 0, the caller thread is pushed into the `waiters` by `list_push_back()` and
+  blocked
+  by `thread_block()`. When the `value` becomes positive, the caller thread decrements the `value` and returns to access
+  the critical section.
 - `sema_up()`: V. If `waiters` is not empty (i.e., there are threads that want to access the critical section), the
-  front thread is popped by `list_pop_front()`. Then, the popped thread takes access to the critical section. Regardless of `waiters`, `sema_up()` increments the `value`.
+  front thread is popped by `list_pop_front()`. Then, the popped thread takes access to the critical section. Regardless
+  of `waiters`, `sema_up()` increments the `value`.
 
 According to the semaphore definition, it seems normal to initialize the semaphore's value to a
 positive number depending on how many resources are available.
@@ -338,7 +346,8 @@ In this case, the caller (i.e., the thread that initialized the semaphore and ca
 into `waiters` and then blocked.
 As the caller whose state was running is blocked, another thread in the ready list is selected and becomes the following
 running thread.
-The selected running thread does its job and then calls `sema_up()` to make the previous running thread become the current
+The selected running thread does its job and then calls `sema_up()` to make the previous running thread become the
+current
 running thread again.
 A typical example is the initializing step of the `idle` thread. The `main` thread initializes the
 semaphore `idle_started` with `value` 0 and calls `sema_down` to pass the control flow to the `idle` thread.
@@ -349,14 +358,16 @@ There are other functions for `semaphore` in pintos, `sema_try_down()` and `sema
 
 `sema_try_down()` is similar to `sema_down()` as it is a kind of P function. However, it works only when the `value` is
 positive.
-In other words, if the `value` is 0, it returns `false`, and the caller neither enters the `waiters` nor becomes blocked.
+In other words, if the `value` is 0, it returns `false`, and the caller neither enters the `waiters` nor becomes
+blocked.
 If the `value` is positive, it decreases the `value` by one and returns `true`.
 
 `sema_self_test()` is a function for self-testing.
 
 ### Lock
 
-A Lock is a synchronization primitive like a semaphore. It is used for controlling access to a shared resource like semaphore.
+A Lock is a synchronization primitive like a semaphore. It is used for controlling access to a shared resource like
+semaphore.
 The semaphore's P(or "down") is "acquire" in the lock, and the V (or "up") of the semaphore is "release" in the lock.
 
 There are two main differences between a lock and a semaphore.
@@ -371,6 +382,7 @@ There are two main differences between a lock and a semaphore.
   In contrast, a lock can only be "released" by the thread that "acquired" it.
 
 Pintos implemented a lock as follows.
+
 ```c++
 struct lock
   {
@@ -379,7 +391,8 @@ struct lock
   };
 ```
 
-As a lock performs like a binary semaphore, it has a `semaphore` as a member variable and a `holder` for the thread holding
+As a lock performs like a binary semaphore, it has a `semaphore` as a member variable and a `holder` for the thread
+holding
 the lock.
 A function `lock_init()` initializes a lock. There are four functions to implement the lock features.
 
@@ -395,31 +408,40 @@ A function `lock_init()` initializes a lock. There are four functions to impleme
   It returns `true` if the `holder` is the current thread. Otherwise, it returns `false`.
 
 ### Condition Variable
+
 A condition variable is a synchronization primitive designed to solve a synchronization problem.
 A semaphore and a lock can handle the concurrency problem by limiting the number of threads to access the critical area.
 However, they do not focus on controlling the order in the interdependent threads.
-The condition variable defines how the dependent thread gives the control flow to the responsible thread and takes it back.
+The condition variable defines how the dependent thread gives the control flow to the responsible thread and takes it
+back.
 
-If a thread(Thread A) wants to access the shared resource after another thread(Thread B) works on that shared value, it uses a condition variable.
-In this case, the "condition" is "Is Thread B finished its work?". Thread A waits for the condition to become true, and Thread B signals to Thread A if the condition is satisfied.
+If a thread(Thread A) wants to access the shared resource after another thread(Thread B) works on that shared value, it
+uses a condition variable.
+In this case, the "condition" is "Is Thread B finished its work?". Thread A waits for the condition to become true, and
+Thread B signals to Thread A if the condition is satisfied.
 Here is a brief explanation of how the condition variable works using a lock and a semaphore.
 
 - First, Thread A needs to lock the common resource and acquire to prevent other threads from accessing.
 - Then, it prepares a semaphore with an initial value of 0 to block itself until the common resource is ready.
-- After preparing the semaphore, it releases the lock and blocks itself using the prepared semaphore so that Thread B can access it.
+- After preparing the semaphore, it releases the lock and blocks itself using the prepared semaphore so that Thread B
+  can access it.
 - The Thread B acquires the lock and does the work needed on the common resource.
-- When Thread B finishes the job, it sends a signal to the blocked thread, Thread A, which is the V operation of the semaphore.
+- When Thread B finishes the job, it sends a signal to the blocked thread, Thread A, which is the V operation of the
+  semaphore.
 - Finally, it can release the lock for Thread A.
 
 Pintos implemented a condition as follows.
+
 ```c++
 struct condition
   {
     struct list waiters;    /* List of waiting threads */
   };
 ```
+
 The list `waiters` holds the struct `semaphore_elem` elements.
 `semaphore_elem` is defined like below.
+
 ```c++
 struct semaphore_elem
   {
@@ -427,24 +449,33 @@ struct semaphore_elem
     struct semaphore semaphore;     /* This semaphore. */
   };
 ```
-`condition` is initialized by `cond_init()` and performs its functionality with three functions, `cond_wait()`, `cond_signal()` and `cond_broadcast()`.
+
+`condition` is initialized by `cond_init()` and performs its functionality with three
+functions, `cond_wait()`, `cond_signal()` and `cond_broadcast()`.
+
 - `cond_init()`: Initialize the list `waiters`.
 - `cond_wait()`: Receives a `lock` as an argument and has a local variable `semaphore_elem` `waiter`.
 
 This `lock` is the lock already acquired by the caller.
 
-After calling `cond_wait()`, the `waiter` semaphore initialized with the `value` 0 and `list_push_back()` into `waiters`.
+After calling `cond_wait()`, the `waiter` semaphore initialized with the `value` 0 and `list_push_back()`
+into `waiters`.
 Then the `lock` released, and the `waiter` semaphore downed to make the thread wait for the "signal".
-As the `lock` is released, it can be acquired by other threads. The thread which acquires the `lock` will send the signal to the waiting thread.
+As the `lock` is released, it can be acquired by other threads. The thread which acquires the `lock` will send the
+signal to the waiting thread.
 The "signal" will make the semaphore up, and after receiving the signal, the thread re-acquires the lock.
+
 - `cond_signal()`: Called by the current thread, which acquires the lock released in `cond_wait()`.
-It makes the first waiting semaphore up (i.e., make the waiting thread ready).
-After calling `cond_signal()`, the caller can release the lock.
-- `cond_broadcast()`: If there is more than one `waiter` in the `waiters`, the caller can send signals to every `waiter` in `waiters` using this function.
+  It makes the first waiting semaphore up (i.e., make the waiting thread ready).
+  After calling `cond_signal()`, the caller can release the lock.
+- `cond_broadcast()`: If there is more than one `waiter` in the `waiters`, the caller can send signals to every `waiter`
+  in `waiters` using this function.
 
 ### Optimization barrier
+
 An optimization barrier is a barrier to the compiler not optimizing or reordering across it.
-Without the barrier, the compiler can optimize and reorder the instructions, resulting in a buggy program because the order of the instructions plays an important role in the synchronization problem.
+Without the barrier, the compiler can optimize and reorder the instructions, resulting in a buggy program because the
+order of the instructions plays an important role in the synchronization problem.
 
 # Requirements
 
@@ -507,7 +538,6 @@ Awakening algorithms
 - Otherwise,
     - We `list_pop_front()` and `sema_up()` the `semaphore` of the popped `sleep_list_elem`.
     - Iterate until finding the `sleep_list_elem` whose `end_tick` is bigger than the current tick.
-
 
 ### Implementation
 
@@ -794,7 +824,16 @@ void refresh_priority(struct thread *t) {
 
 ### Rationale
 
-TODO
+Above algorithm and implmentation is based on the assumetion that
+
+1. `ready_list` is sorted in ascending order of priority
+2. `waiters` in `semapahore` is sorted in ascending order of priority of thread
+
+One implementation is mange list as always sorted. The other possible implementation is to pop element in list in
+sorted manner, while unmannged within list. However, this will require more overhead to manage the list. Both
+implementation will have same time complexity (inserting in sorted list -> O(n), popping in sorted manner -> O(n)).
+To leverage the pre-implemented function in `list`, like `list_insert_ordered()`, we choose to manage list in sorted
+manner.
 
 ## Advanced Scheduler
 
