문법 수정 반영

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -623,126 +623,125 @@ find the thread to wake up every single tick!)
 
 ### Overview of Current Implementation
 
-Current implementation of priority scheduling is based on the `ready_list` in FIFO order. It doesn't consider the
-priority of the thread. Based on the state diagram of the thread life cycle, a thread is pushed to `ready_list` when
-`thread_unblock()` and `thread_yield()` is called. Popping a new thread from `ready_list` is done by `schedule()`.
-`thread_unblock()` and `thread_yield()` call `list_push_back()` to push a thread to `ready_list` the end
-of `ready_list`. `schedule()` calls `next_thread_to_run()` to pop a thread from `ready_list`. `next_thread_to_run()`
-returns the first entry of `ready_list`. In summary, the current implementation of priority scheduling is based on the
-naive FIFO queue, which doesn't take account of the priority of the thread.
+The current implementation of priority scheduling is based on the `ready_list` in FIFO order. It doesn't consider the
+priority of the thread. According to the state diagram of the thread life cycle, a thread is pushed to the `ready_list`
+when `thread_unblock()` and `thread_yield()` are called. Popping a new thread from the `ready_list` is done
+by `schedule()`. Both `thread_unblock()` and `thread_yield()` call `list_push_back()` to push a thread to the end of
+the `ready_list`. `schedule()` calls `next_thread_to_run()` to pop a thread from `ready_list`. `next_thread_to_run()`
+returns the first entry of the `ready_list`. In summary, the current implementation of priority scheduling is based on
+the naive FIFO queue, which doesn't account for the priority of the thread.
 
 ### Priority Inversion
 
-Priority inversion is a problem that occurs when a high priority thread is waiting for cpu resource that is currently
-being used by a low priority thread. A root cause of this is lock that is used to protect a shared resource. Assume
-there are three threads, H, M, L with priority H > M > L. If H is waiting for a lock A that is currently held by L,
-then M can preempt L. At this point, H is at waiting list of lock A, and L is in ready list. After, M finishes its work,
-it gives cpu to L, which is in waiting list. L will run and release the lock A. Then, H will be able to run. Based on
-the priority of threads, H should run first. However, due to the priority inversion, a run order of threads becomes
-M -> L -> H.
+Priority inversion is a problem that occurs when a high-priority thread is waiting for a CPU resource that is currently
+being used by a low-priority thread. A root cause of this is a lock used to protect a shared resource. Assume there are
+three threads: H, M, L, with priority such that H > M > L. If H is waiting for a lock A that is currently held by L,
+then M can preempt L. At this point, H is in the waiting list of lock A, and L is in the ready list. After M finishes
+its work, it yields the CPU to L, which is in the ready list. L will run and release lock A. Then, H will be able to
+run. Based on the priorities of the threads, H should run first. However, due to priority inversion, the run order of
+the threads becomes M -> L -> H.
 
-One solution for this is **priority donation**. When a thread is waiting for a lock, it donates its priority to the
-holder of the lock. In the above example, H donates its priority to L. Then, L will have the highest priority followed
-by L and M
+One solution to this is **priority donation**. When a thread is waiting for a lock, it donates its priority to the
+holder of the lock. In the above example, H donates its priority to L. Thus, L will have the highest priority, followed
+by H and M.
 
-Multiple donation is there is multiple donation occurs. If L hold a lock A and B, and M is will to lock A, then
-M will donation its priority to L and go to waiting list of lock A. Next, H comes in then it want to lock B and donate
-its priority to L. This is called multiple donation.
+Multiple donations occur when there are several instances of donation. If L holds locks A and B, and M wants to lock A,
+then M will donate its priority to L and go to the waiting list of lock A. Next, if H wants to lock B, it donates its
+priority to L. This scenario is referred to as multiple donation.
 
-Nested donation is a case of recursive donation of priority. A previous example's donation is between M -> L, H -> L.
-The nested donation is a case of H -> M -> L. As a precondition, L is holding a lock A, and M is holding a lock B and
-requires lock A. If H needs lock B so donate its priority to M only, M still need lock A. However, lock A is held by L,
-which doesn't have any donation. To solve this case, weed need recursive donation of priority from H -> M and M -> L.
+Nested donation is a case of recursive priority donation. The previous example's donations are between M -> L and H ->
+L. Nested donation is a scenario like H -> M -> L. As a precondition, L is holding lock A, and M is holding lock B and
+requires lock A. If H needs lock B, it donates its priority only to M. M still needs lock A. However, lock A is held by
+L, which hasn't received any donation. To address this situation, we need a recursive donation of priority, moving from
+H -> M and then from M -> L.
 
 ### Data Structures
 
-To achieve priority scheduling, we need to manage `ready_list` in sorted order. Since `ready_list` is implemented as
-`list` in pintos, we can use `list_insert_ordered()` to insert a thread to `ready_list` in sorted order. For this case,
-new data strucutres are not needed.
+To achieve priority scheduling, we need to manage the `ready_list` in a sorted order. Since `ready_list` is implemented
+as a `list` in PintOS, we can use `list_insert_ordered()` to insert a thread into the `ready_list` in sorted order. For
+this, new data structures are not needed.
 
-However, due to priority inversion issue, we need some new member in `struct thread` to manage priority donation.
+However, to address the priority inversion issue, we need to introduce some new members to `struct thread` to manage
+priority donation.
 
 ```c
-struct thread
-  {
-  
-    int original_priority;        /* Original priority of the thread */
-    struct lock *waiting_lock;     /* Lock that the thread is waiting for */
-    struct list donations;        /* List of donations to handle multiple donation */
-    struct list_elem donation_elem;/* List element for donation list */
-  }
+struct thread {
+  ...
+  int original_priority;        /* Original priority of the thread */
+  struct lock *waiting_lock;    /* Lock that the thread is waiting for */
+  struct list donations;        /* List of donations to handle multiple donations */
+  struct list_elem donation_elem; /* List element for donation list */
+  ...
+}
 ```
 
 ### Algorithms
 
-- Manage `ready_list` sorted
-  One effective way is to make `ready_list` sorted when a thread is pushed to `ready_list` in sorted manner. This can be
-  done by using pre-implemented function `list_insert_ordered()`. This function will insert a thread to `ready_list` in
+- **Manage `ready_list` in a sorted manner**:
+  One effective way is to keep the `ready_list` sorted when a thread is pushed into it. This can be achieved by using
+  the pre-implemented function `list_insert_ordered()`. This function will insert a thread into the `ready_list` in a
   sorted order.
 
-- Acquiring lock
-  When a thread is trying to acquire a lock, following steps are done.
+- **Acquiring a lock**:
+  When a thread tries to acquire a lock, the following steps are taken:
 
 ```
 function lock_acquire(struct lock *lock)
-    check if lock is already acquired by other thread
+    check if the lock is already acquired by another thread
     if yes,
-        add lock to thread's waiting list
-        add threads to donation list
-        donate priority to the holder of the lock
+        add the lock to the thread's waiting list
+        add the thread to the donation list
+        donate the priority to the holder of the lock
     
-    set thread's waiting lock to nil
+    set the thread's waiting lock to nil
     acquire the lock with sema_down
-         
 ```
 
-- Donating priority
-  When a thread donates its priority to another thread, following steps are done.
-  The recursive loop to get into depth will resolve the nested donation issue.
+- **Donating priority**:
+  When a thread donates its priority to another thread, the following steps are taken. A recursive loop to delve deeper
+  will resolve the nested donation issue.
 
 ```
 function donate_priority(struct thread *donor, struct thread *donee)
-    donee := donee
-   loop 
+    loop 
         if donor's waiting lock is nil
             break
         donee := donor's waiting lock's holder
         donee -> priority := donor -> priority
         donor := donee
-         
 ```
 
-- Releasing lock
-  When a thread releases a lock, following steps are done.
+- **Releasing a lock**:
+  When a thread releases a lock, the following steps are taken.
 
 ```
 function lock_release(struct lock *lock)
-    remove lock from thread's waiting list
-    remove thread from donation list
-    refresh thread's priority based on the highest priority in donation list
+    remove the lock from the thread's waiting list
+    remove the thread from the donation list
+    refresh the thread's priority based on the highest priority in the donation list
     release the lock
 ```
 
-- Change of priority in running thread
-  When a thread's priority is changed, following steps are done.
+- **Changing priority in a running thread**:
+  When a thread's priority is changed, the following steps are taken.
 
 ```c
 function thread_set_priority(int new_priority)
-    if current thread has no donation, 
-      change priority to new_priority
+    if the current thread has no donations, 
+        set priority to new_priority
     else 
-      change original_priority to new_priority
+        set original_priority to new_priority
     
-    if new_priority is lower than current priority
-        if next_thread_to_run's priority is higher than current priority
-            yield the cpu
+    if new_priority is lower than the current priority
+        and if next_thread_to_run's priority is higher than the current priority
+            yield the CPU
 ```
 
 ### Implementation
 
-Implementation of key functions follows
+The following are the key functions for our implementation:
 
-- `ready_list` management
+- **Managing the `ready_list`**:
 
 ```c
 list_insert_ordered(&ready_list, &current_thread->elem, thread_priority_cmp, NULL);
@@ -750,10 +749,9 @@ list_insert_ordered(&ready_list, &current_thread->elem, thread_priority_cmp, NUL
 static bool thread_priority_cmp(const struct list_elem *a, const struct list_elem *b, void *aux) {
   return list_entry(a, struct thread, elem)->priority > list_entry(b, struct thread, elem)->priority;
 }
-
 ```
 
-- `lock_acquire()`
+- **Function for `lock_acquire()`**:
 
 ```c
 void lock_acquire(struct lock *lock) {
@@ -772,11 +770,11 @@ void lock_acquire(struct lock *lock) {
 }
 ```
 
-- `donate_priority()`
+- **Function for `donate_priority()`**:
 
 ```c
 void donate_priority(struct thread *donor, struct thread *donee) {
-  // TODO: dealing with depth of nested search
+  // TODO: Address the depth of the nested search
   while (donee->waiting_lock != NULL) { 
     donee->priority = donor->priority;
     donee = donee->waiting_lock->holder;
@@ -785,7 +783,7 @@ void donate_priority(struct thread *donor, struct thread *donee) {
 }
 ```
 
-- `lock_release()`
+- **Function for `lock_release()`**:
 
 ```c
 void lock_release(struct lock *lock) {
@@ -805,7 +803,7 @@ void lock_release(struct lock *lock) {
 }
 ```
 
-- `refresh_priority()`
+- **Function for `refresh_priority()`**:
 
 ```c
 void refresh_priority(struct thread *t) {
@@ -814,26 +812,31 @@ void refresh_priority(struct thread *t) {
     t->priority = t->original_priority;
     return;
   } 
+  
   struct thread *max = list_entry(list_max(&t->donations, thread_priority_cmp, NULL), struct thread, donation_elem);
   if (max->priority > t->original_priority) {
-      t->priority = max->priority;
-      return;
+    t->priority = max->priority;
   }
 }
 ```
 
 ### Rationale
 
-Above algorithm and implmentation is based on the assumetion that
+The aforementioned algorithm and implementation are based on the assumptions that:
 
-1. `ready_list` is sorted in ascending order of priority
-2. `waiters` in `semapahore` is sorted in ascending order of priority of thread
+1. The `ready_list` is sorted in ascending order of priority.
+2. `waiters` in the `semaphore` are sorted based on the ascending order of thread priority.
 
-One implementation is mange list as always sorted. The other possible implementation is to pop element in list in
-sorted manner, while unmannged within list. However, this will require more overhead to manage the list. Both
-implementation will have same time complexity (inserting in sorted list -> O(n), popping in sorted manner -> O(n)).
-To leverage the pre-implemented function in `list`, like `list_insert_ordered()`, we choose to manage list in sorted
-manner.
+There are two possible approaches for list management:
+
+1. **Always maintain the list in a sorted manner**: This approach leverages pre-implemented functions
+   like `list_insert_ordered()`.
+2. **Pop elements from the list in a sorted manner but maintain an unsorted list internally**: While this approach might
+   seem efficient, it requires additional overhead to ensure the list's order during operations.
+
+Both approaches have the same time complexity: inserting into a sorted list and popping in a sorted manner both have a
+complexity of O(n). Given the benefits of using the pre-implemented functions in `list`, we chose to always maintain the
+list in a sorted manner.
 
 ## Advanced Scheduler
 
