생략한 설명 추가

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -774,6 +774,7 @@ void lock_acquire(struct lock *lock) {
 
 ```c
 void donate_priority(struct thread *donor, struct thread *donee) {
+  // Init variables
   // TODO: Address the depth of the nested search
   while (donee->waiting_lock != NULL) { 
     donee->priority = donor->priority;
