ready_list 의 thread 에 도네이션 할때의 정렬 추가

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -702,13 +702,18 @@ function lock_acquire(struct lock *lock)
   will resolve the nested donation issue.
 
 ```
-function donate_priority(struct thread *donor, struct thread *donee)
+function donate_priority()
+    doner := current thread
+    donee := doner's waiting lock's holder
     loop 
         if donor's waiting lock is nil
             break
-        donee := donor's waiting lock's holder
-        donee -> priority := donor -> priority
-        donor := donee
+        if doner's priority is greater than donee's priority
+            donee -> priority := donor -> priority
+            donor := donee
+            donee := donor's waiting lock's holder
+    if changed priority of donee in ready list
+        sort ready list 
 ```
 
 - **Releasing a lock**:
@@ -773,13 +778,24 @@ void lock_acquire(struct lock *lock) {
 - **Function for `donate_priority()`**:
 
 ```c
-void donate_priority(struct thread *donor, struct thread *donee) {
+void donate_priority() {
+  bool is_in_ready_list = false; // if the donee is in the ready list, sort ready_list
+  struct thread *priority_doner = thread_current();
+  struct thread *lock_holder = doner->waiting_lock->holder;
   // Init variables
   // TODO: Address the depth of the nested search
-  while (donee->waiting_lock != NULL) { 
-    donee->priority = donor->priority;
-    donee = donee->waiting_lock->holder;
-    donor = donee;
+  while (priority_doner->waiting_lock != NULL) {
+    if(lock_holder-> status == THREAD_READY) {
+      is_in_ready_list = true;
+    }
+    if(priority_doner->priority > lock_holder->priority){
+      lock_holder->priority = priority_doner->priority;
+      priority_doner = lock_holder;
+      lock_holder = priority_doner->waiting_lock->holder;
+    }
+  }
+  if (is_in_ready_list) {
+    list_sort(&ready_list, thread_priority_cmp, NULL);
   }
 }
 ```
