preemptive yield 내용 추가

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -742,6 +742,19 @@ function thread_set_priority(int new_priority)
             yield the CPU
 ```
 
+- **preemption**:
+  When a thread is preempted, the following steps are taken.
+
+```c
+function preemptive_yield()
+  if (
+      interrupts are not disabled
+        and ready list is not empty
+        and current thread's priority is lower than the next thread's priority
+      )
+    yield the CPU
+```
+
 ### Implementation
 
 The following are the key functions for our implementation:
@@ -834,6 +847,20 @@ void refresh_priority(struct thread *t) {
   if (max->priority > t->original_priority) {
     t->priority = max->priority;
   }
+}
+```
+
+- **Function for `preemtive_yield()`**:
+
+```c
+// Add this funcion to where two conditions occurs, change or priority in running thread. new thread added to ready list
+// such as, thread_create(), thread_set_priority(), sema_up()
+void preemtive_yield() {
+struct thread *current = thread_current();
+struct thread *next = list_entry(list_front(&ready_list), struct thread, elem);
+if (!intr_context() && !list_empty(&ready_list) && current->priority < next->priority) {
+thread_yield();
+}
 }
 ```
 
