리뷰에서 논의 했던 내용들 further note 에 추가

--- a/docs/p1.md
+++ b/docs/p1.md
@@ -153,10 +153,10 @@ member of `struct thread`.
 ```c
 /* States in a thread's life cycle. */
 enum thread_status {
-  THREAD_RUNNING,     /* Running thread. */
-  THREAD_READY,       /* Not running but ready to run. */
-  THREAD_BLOCKED,     /* Waiting for an event to trigger. */
-  THREAD_DYING        /* About to be destroyed. */
+THREAD_RUNNING,     /* Running thread. */
+THREAD_READY,       /* Not running but ready to run. */
+THREAD_BLOCKED,     /* Waiting for an event to trigger. */
+THREAD_DYING        /* About to be destroyed. */
 };
 ```
 
@@ -881,6 +881,22 @@ There are two possible approaches for list management:
 Both approaches have the same time complexity: inserting into a sorted list and popping in a sorted manner both have a
 complexity of O(n). Given the benefits of using the pre-implemented functions in `list`, we chose to always maintain the
 list in a sorted manner.
+
+### Further Notes
+
+There are some additional notes to consider:
+
+- Related to `lock_release()`
+    - A thread will be unblocked by `sema_up()`. A current implementation of `sema_up()` works as FIFO. Thus,
+      we need to add sorting process based on the priority of the thread to `sema_up()`
+- Related to `ready_list`
+    - As we mentioned above in the rationale, we need to maintain the `ready_list` in a sorted manner.
+      But, there exists edge case that the `ready_list` is not sorted. Like change of priority of thread in the
+      `ready_list` due to priority donation. To handle this case, we check whether lock holder is in ready_list, and
+      sort the `ready_list` if it is in the `ready_list`.
+- Related to `cond variables`
+    - `cond` also use waiters list. So, we need to sort the waiters list based on the priority of the thread.
+      We can use `list_insert_ordered()` to sort the waiters list.
 
 ## Advanced Scheduler
 
